update linux action